--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordpress-starter-theme",
+  "name": "drupal-7-starter-theme",
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
